# ScopeCanvas

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
demo/common/: CMakeLists.txt
demo/common/include/ScopeCanvas/demo/: DiagramBasics.h  DiagramDrawContext.h
demo/common/src/: DiagramBasics.cpp  DiagramDrawContext.cpp
demo/common/src/diagram/: DiagramBasics.cpp
demo/common/src/window/: DiagramWindow.cpp
demo/flow/: CMakeLists.txt
demo/flow/src/: FlowDrawContext.cpp  FlowDrawContext.h  FlowViewport.cpp  FlowViewport.h  main.cpp
demo/gl/: CMakeLists.txt
demo/gl/src/: App.cpp  App.h  DemoViewport.cpp  DemoViewport.h  GLFWTrampoline.h  main.cpp
demo/imgui/: CMakeLists.txt
demo/imgui/src/: ImGuiInputListener.h  ImGuiPlatformWindowHooks.h  main.cpp
demo/imgui/src/diagram/: DiagramBasics.cpp  DiagramBasics.h
demo/imgui/src/windows/: NodeDiagramWindow.cpp  NodeDiagramWindow.h
demo/web/: CMakeLists.txt  shell.html
demo/web/src/: main.cpp
engine/ScopeCanvasCore/: .gitignore  CMakeLists.txt
engine/ScopeCanvasCore/doc/: engine.puml
engine/ScopeCanvasCore/tests/: ConnectorTests.cpp  IdTests.cpp  LayoutTests.cpp  NodeTests.cpp  Vec2Tests.cpp
engine/ScopeCanvasCore/tests/enginecore/: ConnectorLogicTests.cpp  DiagramModelTests.cpp  GridSettingsTests.cpp  LayoutGroupTests.cpp  NodeBuilderRegistryTests.cpp
engine/ScopeCanvasCore/tests/routing/: EdgeBundleTests.cpp  EdgeRouteTests.cpp  EdgeRouterTests.cpp  RoutingCompileTests.cpp
engine/core/: CMakeLists.txt
engine/core/include/ScopeCanvas/core/: Connector.h  DiagramModel.h  Edge.h  GraphDocument.h  Node.h  Vec2.h
engine/core/src/: DiagramModel.cpp  GraphDocument.cpp  core.cpp
engine/core/src/builders/: NodeBuilderRegistry.cpp  NodeBuilderRegistry.h
engine/core/src/flow/: FlowDocument.cpp
engine/core/src/layout/: GridSettings.h
engine/core/src/logic/: ConnectorLogic.cpp  ConnectorLogic.h
engine/core/tests/: SC_Core_Connector.cpp  SC_Core_ConnectorLogic.cpp  SC_Core_DiagramModel.cpp  SC_Core_FlowDocument.cpp  SC_Core_GraphDocument.cpp  SC_Core_GridSettings.cpp  SC_Core_IdRegistry.cpp  SC_Core_Ids.cpp  SC_Core_Layout.cpp  SC_Core_LayoutGroup.cpp  SC_Core_Node.cpp  SC_Core_NodeBuilderRegistry.cpp  SC_Core_Vec2.cpp
engine/routing/: CMakeLists.txt
engine/routing/include/ScopeCanvas/routing/: EdgeBundle.h  (+4 more)
engine/routing/src/: EdgeBundle.cpp  EdgeRouter.cpp
engine/routing/src/flow/: FlowLayout.cpp
engine/routing/tests/: SC_Routing_Compile.cpp  SC_Routing_EdgeBundle.cpp  SC_Routing_EdgeRouter.cpp  SC_Routing_FlowLayout.cpp
integration/glfw/: CMakeLists.txt
integration/glfw/src/: GlfwBootstrap.cpp  GlfwViewportBindings.cpp
integration/web/: CMakeLists.txt
integration/web/src/: WebViewportBindings.cpp
refactor/remove imgui draw/OldScopeCanvas/: CMakeLists.txt
refactor/remove imgui draw/OldScopeCanvas/ScopeCanvas/: App.h  GridSettings.h  main.cpp
refactor/remove imgui draw/OldScopeCanvas/ScopeCanvasStudio/: main.cpp
render/: CMakeLists.txt
render/core/: CMakeLists.txt
render/core/src/: CanvasFrameBuilder.cpp  CanvasRenderer.cpp  EdgeRenderer.cpp  GridRenderer.cpp  NodeRenderer.cpp  RenderBenchmark.cpp  SelectionRectRenderer.cpp
render/core/src/camera/: Camera2D.cpp
render/core/src/flow/: FlowRenderer.cpp
render/core/src/gl/: Framebuffer.h  Shader.cpp
render/core/src/renderers/: CanvasFrameBuilder.cpp  CanvasRenderer.cpp  EdgeRenderer.cpp  GridRenderer.cpp  NodeRenderer.cpp  SelectionRectRenderer.cpp
render/core/src/scene/: SceneBuilder.cpp
render/core/src/window/: Canvas.cpp  Viewport.cpp  ViewportHandler.cpp
render/core/tests/: SC_Render_ViewportHandlerInput.cpp
render/src/camera/: Camera2D.cpp
render/src/gl/: Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
render/src/renderers/: CanvasRenderer.cpp  EdgeRenderer.cpp  GridRenderer.cpp  GridRenderer.h  NodeRenderer.cpp
render/src/scene/: SceneBuilder.cpp
src/ScopeCanvasRenderGL/: CMakeLists.txt
src/ScopeCanvasRenderGL/Camera/: Camera2D.cpp  Camera2D.h
src/ScopeCanvasRenderGL/GL/: Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/ScopeCanvasRenderGL/Renderers/: CanvasRenderer.cpp  CanvasRenderer.h  EdgeRenderer.cpp  EdgeRenderer.h  GridRenderer.cpp  GridRenderer.h  NodeRenderer.cpp  NodeRenderer.h
src/ScopeCanvasRenderGL/Scene/: RenderScene.h  SceneBuilder.cpp  SceneBuilder.h
src/ScopeCanvasRenderGL/Theme/: NodeVisualRegistry.cpp  NodeVisualRegistry.h
src/engine/: CMakeLists.txt
src/engine/ScopeCanvas/: App.cpp
src/engine/ScopeCanvas/Engine/: CanvasEngine.cpp  CanvasEngine.h  CanvasExtensionPoints.h  CanvasIds.h  DiagramModel.cpp  DiagramModel.h  LayoutEngine.cpp  NodeDefinitionRegistry.h  NodeTypes.cpp  NodeTypes.h
src/engine/ScopeCanvas/Interaction/: ConnectController.cpp  ConnectController.h  DragController.cpp  EdgeInteractionController.cpp  EdgeInteractionController.h  SelectionController.cpp  SelectionController.h
src/engine/ScopeCanvas/Render/: EdgeRenderer.cpp  EdgeRenderer.h  GridRenderer.cpp  NodeRenderer.h  Renderer.cpp  Renderer.h  Shader.h
src/engine/ScopeCanvas/View/: Viewport.cpp
src/engine/ScopeCanvas/c_api/: nodecanvas_c_api.cpp
src/engine/core/: CMakeLists.txt
src/engine/render/: CMakeLists.txt
src/engine/tests/: CMakeLists.txt  DiagramModelTests.cpp
src/studio/: CMakeLists.txt
src/studio/ScopeCanvasStudio/: main.cpp
src/studio/ScopeCanvasStudio/demo/: Sha256Demo.cpp  Sha256Demo.h
src/studio/ScopeCanvasStudio/diagram/: DiagramBasics.cpp  DiagramBasics.h
src/studio/ScopeCanvasStudio/windows/: NodeDiagramWindow.cpp  NodeDiagramWindow.h
studio/: CMakeLists.txt
studio/src/: main.cpp
studio/src/diagram/: DiagramBasics.cpp  DiagramBasics.h
studio/src/windows/: NodeDiagramWindow.cpp  NodeDiagramWindow.h
widget/: CMakeLists.txt
widget/include/ScopeCanvas/widget/: GraphDocument.h  NodeInfo.h
widget/src/: GraphDocument.cpp  NodeInfo.cpp
widget/src/render/: NodeInfo.cpp
widget/src/render/theme/: NodeVisualRegistry.cpp
widget/src/theme/: NodeVisualRegistry.cpp
(+198 files in other folders)
