add_subdirectory(core)
add_subdirectory(render)
add_subdirectory(tests)

add_library(ScopeCanvasEngine INTERFACE)
if(SCOPECANVAS_BUILD_STUDIO)
    target_link_libraries(ScopeCanvasEngine INTERFACE ScopeCanvasEngineCore ScopeCanvasEngineRender)
else()
    target_link_libraries(ScopeCanvasEngine INTERFACE ScopeCanvasEngineCore)
endif()
